Added base card content

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 
     <article class="card">
       <picture>
-        <img src="./images/image-qr-code.png" alt="Image of QR code">
+        <img class="image-qr-code" src="./images/image-qr-code.png" alt="Image of QR code">
       </picture>
-      <div class="card--content">
-        Improve your front-end skills by building projects
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      <div class="card__content">
+        <h2 class="card__title">
+          Improve your front-end skills by building projects
+        </h2>
+        <p class="card__content">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
       </div>
     </article>
   </main>
